# vala-example

./: README.md  com.github.theironrobin.siglovala.json  meson.build
data/: com.github.theironrobin.siglovala.appdata.xml.in  com.github.theironrobin.siglovala.desktop.in  com.github.theironrobin.siglovala.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  siglo_vala.gresource.xml  window.ui  window.vala
